# GameEngine

./: CMakeLists.txt  CMakeLists.txt~  main.cpp
controls/: controls.cpp
lightning/: Light.hpp  Light.hpp.autosave
meshes/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  triangle.cpp  triangle.hpp  vertex.cpp  vertex.hpp
meshes/shapes/: Box.cpp  Box.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
oldFiles/: Shader.hpp  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  texture
shaders/: Shader.cpp  fragmentShader  test~  vertexShader
textures/: Texture.cpp  Texture.hpp
